# Version History

## unreleased

## 0.4.0

* [AT-1443] - v1.1 Dish Structure Sim delivery

## 0.3.0

* [AT-1487] - Remove unused images and helm configuration.

## 0.2.0

* [AT-744] Add Dish structure sim web.