@@ -1,6 +1,6 @@
 ---
 apiVersion: v2
-name: ds-sim
+name: ska-te-dish-structure-simulator
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
