@@ -1,1 +1,4 @@
+#!/bin/bash
+set -euo pipefail
+
 docker run --rm -it -p 8090:8090 -p 4840:4840 -p 5005:5005 --name simulator simulator:1.0
